@@ -111,9 +111,12 @@
  #define LIBRARY	"s9.scm"
 #endif
 
+#ifndef INITIAL_SEGMENT_SIZE
+ #define INITIAL_SEGMENT_SIZE	32768
+#endif
+
 #define TOKEN_LENGTH		1024
 #define MAX_PORTS		32
-#define INITIAL_SEGMENT_SIZE	32768
 #define HASH_THRESHOLD		5
 #define MAX_CALL_TRACE		10
 
@@ -130,6 +133,16 @@
 
 /* A "cell" must be large enough to hold a pointer */
 #define cell	ptrdiff_t
+
+/* 64-bit emulation on 32-bit system; DO NOT USE! */
+#ifdef EMULATE_64
+ #undef BITS_PER_WORD_32
+ #define BITS_PER_WORD_64
+ #undef cell
+ #define cell		long long
+ #define labs(x)	llabs(x)
+ #define atol(x)	atoll(x)
+#endif
 
 /* Pick one ... */
 /* #define BITS_PER_WORD_64 */
@@ -152,13 +165,17 @@
  */
 #ifdef BITS_PER_WORD_64
  #define DIGITS_PER_WORD	18
- #define INT_SEG_LIMIT		1000000000000000000L
+ #ifdef EMULATE_64
+  #define INT_SEG_LIMIT		1000000000000000000LL
+ #else
+  #define INT_SEG_LIMIT		1000000000000000000L
+ #endif
  #define MANTISSA_SEGMENTS	1
 #else
  #ifdef BITS_PER_WORD_32
   #define DIGITS_PER_WORD	9
   #define INT_SEG_LIMIT		1000000000L
-   #define MANTISSA_SEGMENTS	2
+  #define MANTISSA_SEGMENTS	2
  #else
   #ifdef BITS_PER_WORD_16
    #define DIGITS_PER_WORD	4
@@ -476,8 +493,8 @@ EXTERN cell	S_and, S_begin, S_call_ec, S_cond, S_define,
 
 #define real_negate(a) \
 	make_real(real_flags(a) & REAL_NEGATIVE?	\
-			real_flags(a) & ~REAL_NEGATIVE:\
-			real_flags(a) | REAL_NEGATIVE,	\
+			real_flags(a) & ~REAL_NEGATIVE: \
+			real_flags(a) |  REAL_NEGATIVE,	\
 		real_exponent(a), real_mantissa(a))
 
 /*
